<resources>
    <string name="app_name">Movies</string>
    <string name="login">Please sign in ➡️🟩</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="reminder">Remember your password must contain at least six characters and one digit</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="movies">Movies</string>
    <string name="email">Email</string>
    <string name="success_sign_up">Successful sign up</string>
    <string name="invalid_password">Remember your password must be at least 6 characters long and must contain a digit</string>
    <string name="missing_fields">There\'s missing fields</string>
    <string name="trailer">Trailer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>